--- a/index.ipynb
+++ b/index.ipynb
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return (travel_destinations[0])"
+    "    return (travel_destinations[0])\n"
    ]
   },
   {
