--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return (travel_destinations[0])\n"
+    "    returntravel_destinations[0]\n"
    ]
   },
   {
