--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
-    "    travel_destinat"
+    "    travel_destinations.append"
    ]
   },
   {
